tried to work around current layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -33,18 +33,13 @@ h2 {
   animation: fillIn forwards .4s;
 }
 
-a, a:visited {
-  color: white;
-  transition: color .4s;
-}
-
 a:active {
   color: #136F63;
   transition: color .4s;
 }
 
 a:hover {
-  color: #136F63;
+  color: #969696 !important;
   transition: color .4s;
 }
 
@@ -52,8 +47,38 @@ a:hover {
   background: #136F63;
 }
 
+a:-webkit-any-link{
+  color: rgb(226, 226, 226);
+  text-decoration:none !important;
+  transition: color .4s;
+}
+
 h1 {
   font-family: 'Megrim', cursive;
+}
+
+.custom-card {
+  position: relative;
+  background: transparent;
+  border: none;
+}
+
+.hovering {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, rgba(19, 111, 99, 0.705) 10%, rgba(3, 43, 67, 0.705) 75%);
+  position: absolute;
+  opacity: 0;
+  animation: transitionIn .4s forwards;
+  font-family: 'Megrim', cursive;
+  text-align: center;
+  font-size: 4vh;
+}
+
+.hovering:a {
+  color: white;
 }
 
 form {
@@ -61,18 +86,6 @@ form {
   box-shadow: inset #07574c -8px -8px,
   inset #136F63 10px 8px;
   padding: 15px;
-}
-
-.imgPlaceholder {
-  background: #032B43;
-  height: 50%;
-  width: 100%;
-  position: relative;
-}
-
-.project {
-  height: 40em;
-  width: 45em;
 }
 
 .error-message {
@@ -92,6 +105,12 @@ form {
 .fa-custom:hover {
   animation: spinner .5s forwards;
   color: rgb(226, 226, 226);
+}
+
+@keyframes transitionIn {
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes rush {
